--- a/docs/notes/algorithms/простое-сравнение-массивов.md
+++ b/docs/notes/algorithms/простое-сравнение-массивов.md
@@ -1,4 +1,7 @@
-# Простое сравнение массивов
+---
+date: 2025-02-04
+title: Простое сравнение массивов
+---
 
 Алгоритм для сравнения двух массивов данных с выявлением новых, удаленных и измененных записей. Каждая запись идентифицируется уникальным ID и может содержать несколько полей с данными.
 
@@ -6,11 +9,11 @@
 
 ```typescript
 // Базовые типы значений в коллекции
-type CollectionType = string | Date | number | boolean;
+type CollectionType = string | number | boolean | Date;
 
 // Структура значения элемента коллекции
 interface CollectionItemValue {
-  __val: unknown;     // Само значение
+  __val: CollectionType;     // Само значение
   __row: number;      // Номер строки
   __col: number;      // Номер колонки
 }
@@ -24,21 +27,60 @@ interface CollectionItem {
 type Collection = CollectionItem[];
 ```
 
-## Принцип работы
+## Реализация
 
-1. Входные данные представляют собой два массива: новый (`newValues`) и старый (`oldValues`).
-2. Первая строка каждого массива содержит заголовки колонок.
-3. Каждая последующая строка содержит данные записи.
-4. Алгоритм:
-   - Преобразует массивы в коллекции объектов с метаданными
-   - Создает карты (Map) для быстрого доступа по ID
-   - Находит новые записи (есть в новом массиве, нет в старом)
-   - Находит удаленные записи (есть в старом массиве, нет в новом)
-   - Находит измененные записи (есть в обоих массивах, но значения отличаются)
+Алгоритм реализован в виде класса `StateComparator`, который инкапсулирует всю логику сравнения и предоставляет удобный интерфейс для работы с данными.
 
-## Пример входных данных
+### Основные методы
 
 ```typescript
+class StateComparator {
+  /**
+   * Создает экземпляр компаратора
+   * @param newValues - Новый массив данных
+   * @param oldValues - Старый массив данных
+   */
+  constructor(newValues: DataArray, oldValues: DataArray)
+
+  /**
+   * Находит новые элементы, которых нет в старой коллекции
+   */
+  public getNewItems(): CollectionItem[]
+
+  /**
+   * Находит удаленные элементы, которых нет в новой коллекции
+   */
+  public getOldItems(): CollectionItem[]
+
+  /**
+   * Находит измененные элементы и их различия
+   */
+  public getChangedItems(): ModifiedItem[]
+}
+```
+
+## Принцип работы
+
+1. При создании экземпляра класса:
+   - Преобразуются заголовки колонок в нижний регистр
+   - Создаются коллекции объектов с метаданными
+   - Формируются карты (Map) для быстрого доступа по ID
+
+2. Методы сравнения:
+   - Используют Set для оптимизации поиска элементов
+   - Выполняют единый проход по заголовкам при сравнении
+   - Возвращают типизированные результаты
+
+3. Оптимизации:
+   - Кэширование преобразованных данных
+   - Использование Set вместо includes для проверки наличия ключей
+   - Объединение проверок заголовков в один проход
+   - Строгая типизация для безопасности данных
+
+## Пример использования
+
+```typescript
+// Входные данные
 const newValues = [
   ['id', 'param', 'status', 'mark'],
   ['Заказ 4', 1, 'done', 'mark'],
@@ -52,39 +94,141 @@ const oldValues = [
   ['Заказ 2', 2, 'done', 'mark'],
   ['Заказ 3', 1, 'done', 'mark'],
 ];
-```
 
-## Результат сравнения
+// Создание компаратора
+const comparator = new StateComparator(newValues, oldValues);
 
-Алгоритм возвращает три массива:
-
-1. `newItems` - новые записи (присутствуют только в новом массиве)
-2. `oldItems` - удаленные записи (присутствуют только в старом массиве)
-3. `changedItems` - измененные записи, содержащие:
-   - `id` - идентификатор записи
-   - `new` - новые значения
-   - `old` - старые значения
-   - `__modified` - объект с информацией об изменениях:
-     - `__status` - флаг наличия изменений
-     - для каждого измененного поля: `{ new: новое_значение, old: старое_значение }`
-
-## Особенности
-
-- Каждое значение в коллекции содержит метаданные о своем расположении (строка и колонка)
-- Сравнение происходит по значениям (`__val`), игнорируя метаданные
-- Поле `id` используется как ключ для сопоставления записей и не участвует в сравнении изменений
-- Алгоритм учитывает только существующие поля, игнорируя отсутствующие
-
-## Пример использования
-
-```typescript
-// Создание коллекций из массивов
-const newData = convertToCollection(newValues);
-const oldData = convertToCollection(oldValues);
-
-// Получение результатов сравнения
-const { newItems, oldItems, changedItems } = compareCollections(newData, oldData);
+// Получение результатов
+const newItems = comparator.getNewItems();
+const oldItems = comparator.getOldItems();
+const changedItems = comparator.getChangedItems();
 
 console.log('Новые записи:', newItems);
 console.log('Удаленные записи:', oldItems);
 console.log('Измененные записи:', changedItems);
+```
+
+## Результат сравнения
+
+Алгоритм возвращает три набора данных:
+
+1. `newItems`: Новые записи (только в новом массиве)
+   ```typescript
+   CollectionItem[]
+   ```
+
+2. `oldItems`: Удаленные записи (только в старом массиве)
+   ```typescript
+   CollectionItem[]
+   ```
+
+3. `changedItems`: Измененные записи
+   ```typescript
+   {
+     __modified: {
+       __status: boolean;
+       [key: string]: { new: CollectionType; old: CollectionType } | boolean;
+     };
+     id: string;
+     new: CollectionItem;
+     old: CollectionItem;
+   }[]
+   ```
+
+## Особенности реализации
+
+- Объектно-ориентированный подход с инкапсуляцией логики в классе
+- Строгая типизация всех структур данных
+- Оптимизированные алгоритмы сравнения
+- Сохранение метаданных о расположении значений
+- Игнорирование поля `id` при сравнении изменений
+- Поддержка отсутствующих полей в записях
+
+## Сложность алгоритма
+
+Временная сложность алгоритма:
+- Создание компаратора: O(n), где n - общее количество элементов в обоих массивах
+  - Преобразование заголовков: O(h), где h - количество заголовков
+  - Создание коллекций: O(n)
+  - Создание карт доступа: O(n)
+- Поиск новых элементов: O(n)
+- Поиск удаленных элементов: O(n)
+- Поиск измененных элементов: O(n * h), где h - количество заголовков
+
+Пространственная сложность: O(n), где n - общее количество элементов
+- Хранение преобразованных коллекций: O(n)
+- Хранение карт доступа: O(n)
+- Хранение множеств для сравнения: O(n)
+
+## Примеры вывода
+
+Для входных данных из примера выше, результат будет следующим:
+
+```typescript
+// Новые записи
+[
+  {
+    "id": { "__val": "Заказ 4", "__row": 2, "__col": 1 },
+    "param": { "__val": 1, "__row": 2, "__col": 2 },
+    "status": { "__val": "done", "__row": 2, "__col": 3 },
+    "mark": { "__val": "mark", "__row": 2, "__col": 4 }
+  }
+]
+
+// Удаленные записи
+[
+  {
+    "id": { "__val": "Заказ 1", "__row": 2, "__col": 1 },
+    "param": { "__val": 1, "__row": 2, "__col": 2 },
+    "status": { "__val": "done", "__row": 2, "__col": 3 },
+    "mark": { "__val": "mark", "__row": 2, "__col": 4 }
+  }
+]
+
+// Измененные записи
+[
+  {
+    "__modified": {
+      "__status": true,
+      "param": { "new": 1, "old": 2 },
+      "status": { "new": "in proc", "old": "done" }
+    },
+    "id": "Заказ 2",
+    "new": {
+      "id": { "__val": "Заказ 2", "__row": 3, "__col": 1 },
+      "param": { "__val": 1, "__row": 3, "__col": 2 },
+      "status": { "__val": "in proc", "__row": 3, "__col": 3 },
+      "mark": { "__val": "mark", "__row": 3, "__col": 4 }
+    },
+    "old": {
+      "id": { "__val": "Заказ 2", "__row": 3, "__col": 1 },
+      "param": { "__val": 2, "__row": 3, "__col": 2 },
+      "status": { "__val": "done", "__row": 3, "__col": 3 },
+      "mark": { "__val": "mark", "__row": 3, "__col": 4 }
+    }
+  }
+]
+```
+
+## Ограничения и edge cases
+
+1. Требования к входным данным:
+   - Массивы должны содержать как минимум строку заголовков
+   - Первая строка должна содержать заголовок 'id'
+   - Значения ID должны быть уникальными в пределах каждого массива
+
+2. Особые случаи:
+   - Пустые массивы (кроме заголовков):
+     - Новый массив пуст → все записи считаются удаленными
+     - Старый массив пуст → все записи считаются новыми
+   - Отсутствующие значения:
+     - Пропущенные колонки заполняются undefined
+     - Пустые ячейки (null, undefined) считаются валидными значениями при сравнении
+   - Регистр заголовков:
+     - Все заголовки приводятся к нижнему регистру
+     - 'ID', 'Id', 'iD' считаются одним и тем же заголовком
+
+3. Ограничения:
+   - Алгоритм не поддерживает вложенные структуры данных
+   - Максимальный размер массивов ограничен только доступной памятью
+   - Порядок элементов в результирующих массивах может отличаться от исходного
